--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,15 +11,39 @@
         <div class="text-center">
             <h1>Welcome to URL Shortener</h1>
             <p>Use the form below to shorten your URLs.</p>
-            <form action="/shorten" method="POST" id="form">
-                <input class="form-control mb-3" id="url" type="url" name="url" placeholder="Enter URL to shorten" required>
+            <form action="/shorten" method="POST" id="form" class="mb-3">
+                <input class="form-control text-center mb-2"  id="url" type="url" name="url" placeholder="Enter URL to shorten" required>
                 <!-- <br> -->
+                 
                 <button class="btn btn-primary" type="submit">Shorten</button>
             </form>
+            
+                 <span id="message" class="mt-3"></span>
         </div>
     </main>
     <script>
-        
+        const form = document.getElementById('form');
+        form.addEventListener("submit",async(e)=>{
+              e.preventDefault();
+            const url = document.getElementById('url').value;
+            const message = document.getElementById('message');
+          const data = await  fetch('/shorten',{
+                method:'POST',
+                headers:{
+                    'Content-type': 'application/json'
+                },
+                body:JSON.stringify({url})
+            });
+            const response = await data.json();
+            if(response.status===404){
+                message.textContent = response.message;
+                return;
+            }
+            if(response.status===200){
+                message.textContent = `Your shorten URL is ${response.message}`;
+                return;
+            }
+        });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
